--- a/algobattle_web/templates/admin_teams.jinja
+++ b/algobattle_web/templates/admin_teams.jinja
@@ -96,7 +96,7 @@
       <div class="col-md w-em">
         <label for="user-select" class="form-label">User</label>
         <select class="form-select form-select-sm" id="user-select" name="user">
-          <option v-for="user in users" :value="user.name">${user.name}</option>
+          <option v-for="user in users" :value="user.id">${user.name}</option>
         </select>
       </div>
     </div>
