--- a/algobattle_web/templates/admin_users.jinja
+++ b/algobattle_web/templates/admin_users.jinja
@@ -4,6 +4,7 @@
 <script src="/static/scripts/admin_users.js" type="module"></script>
 <script>
   var users_input = {{users | tojson}}
+  var teams_input = {{teams | tojson}}
 </script>
 
 <script type="text/x-template" id="table_row">
@@ -25,7 +26,7 @@
       <input v-if="editing" class="form-control form-control-sm" name="email" type="email" :placeholder="user.email">
       <span v-else>${user.email}</span>
     </td>
-    <td><span>${user.teams?.join(", ")}</span></td>
+    <td><span>${teams_str}</span></td>
     <td class="text-end">
       <div class="btn-group btn-group-sm" role="group" v-if="user.id != '{{user.id}}'">
         <button type="button" class="btn btn-danger" data-bs-toggle="tooltip" title="Delete user" v-if="editing" @click="delete_user"><i class="bi bi-trash"></i></button>
@@ -50,7 +51,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr is="vue:table-row" v-for="user in users" :user="user" :key="user.id" @deluser="del_event"></tr>
+        <tr is="vue:table-row" v-for="user in store.users" :user="user" :key="user.id"></tr>
       </tbody>
     </table>
   </form>
