add configs page

--- a/algobattle_web/templates/base.jinja
+++ b/algobattle_web/templates/base.jinja
@@ -45,6 +45,11 @@
                   <i class="bi bi-people"></i></i> <span class="ms-1 d-none d-sm-inline">Teams</span>
                 </a>
               </li>
+              <li class="nav-item">
+                <a href="/admin/configs" class="nav-link align-middle {{'active' if request.url.path == '/admin/configs'}}">
+                  <i class="bi bi-sliders"></i></i> <span class="ms-1 d-none d-sm-inline">Configs</span>
+                </a>
+              </li>
               {% endif %}
             </ul>
             <hr class="d-none d-sm-inline">
