add upload config file functionality

--- a/algobattle_web/templates/admin_configs.jinja
+++ b/algobattle_web/templates/admin_configs.jinja
@@ -1,45 +1,26 @@
 {% extends "base.jinja" %}
 {% block content %}
 
-<script src="/static/scripts/admin_teams.js" type="module"></script>
+<script src="/static/scripts/admin_configs.js" type="module"></script>
 <script>
   var configs = {{configs | tojson}}
 </script>
 
 
-<script type="text/x-template" id="team_row">
+<script type="text/x-template" id="config_row">
   <tr>
     <td>
-      <input v-if="editing" class="form-control form-control-sm" name="name" type="text" :placeholder="team.name">
-      <span v-else>${team.name}</span>
+      <input v-if="editing" class="form-control form-control-sm" name="name" type="text" :placeholder="config.name">
+      <span v-else>${config.name}</span>
     </td>
     <td>
-      <select v-if="editing" class="form-select form-select-sm" name="context">
-        <option v-for="(ctx, id) in store.contexts" :value="id" :selected="id == team.context">${ctx.name}</option>
-      </select>
-      <span v-else>${store.contexts[team.context].name}</span>
-    </td>
-    <td><span>${members_str}</span></td>
-    <td class="text-end">
-      <div class="btn-group btn-group-sm" role="group">
-        <button type="button" class="btn btn-danger" data-bs-toggle="tooltip" title="Delete team" v-if="editing" @click="delete_team"><i class="bi bi-trash"></i></button>
-        <button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit team" @click="toggle_editing"><i class="bi bi-pencil"></i></button>
-        <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" title="Submit edit" v-if="editing"><i class="bi bi-check2"></i></button>
-      </div>
-    </td>
-  </tr>
-</script>
-
-<script type="text/x-template" id="context_row">
-  <tr>
-    <td>
-      <input v-if="editing" class="form-control form-control-sm" name="name" type="text" :placeholder="context.name">
-      <span v-else>${context.name}</span>
+      <input v-if="editing" class="e-em form-control form-control-sm" id="configFile" type="file">
+      <button v-else type="button" class="btn btn-primary btn-sm"  data-bs-toggle="tooltip" title="Download config file" @click="download_config"><i class="bi bi-file-earmark-arrow-down"></i></button>
     </td>
     <td class="text-end">
       <div class="btn-group btn-group-sm" role="group">
-        <button type="button" class="btn btn-danger" data-bs-toggle="tooltip" title="Delete team" v-if="editing" @click="delete_context"><i class="bi bi-trash"></i></button>
-        <button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit team" @click="toggle_editing"><i class="bi bi-pencil"></i></button>
+        <button type="button" class="btn btn-danger" v-if="editing" @click="delete_config"><i class="bi bi-trash"></i></button>
+        <button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit" @click="toggle_editing"><i class="bi bi-pencil"></i></button>
         <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" title="Submit edit" v-if="editing"><i class="bi bi-check2"></i></button>
       </div>
     </td>
@@ -49,6 +30,35 @@
 
 <div id="app">
   <h3>Configs</h3>
+  <form id="config-table" @submit.prevent="edit_config" class="mb-5">
+    <table class="table w-xs" id="configs">
+      <thead>
+        <tr>
+          <th scope="col">Name</th>
+          <th scope="col">File</th>
+          <th scope="col"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr is="vue:config-row" v-for="(config, id) in store.configs" :config="config" :key="id"></tr>
+      </tbody>
+    </table>
+  </form>
+
+  <h3>Upload new config</h3>
+  <form id="create-team" @submit.prevent="create_config" class="mb-5">
+    <div class="row g-2">
+      <div class="col-md w-em">
+        <label for="name" class="form-label">Name</label>
+        <input class="form-control form-control-sm" name="name" type="text" required="required">
+      </div>
+      <div class="col-md w-em mb-3">
+        <label for="configFile" class="form-label">Config file</label>
+        <input class="form-control form-control-sm" name="file" type="file" required="required">
+      </div>
+    </div>
+    <button type="submit" class="btn btn-primary mt-3">Upload</button>
+  </form>
 </div>
 
 
