--- a/algobattle_web/templates/admin_problems.jinja
+++ b/algobattle_web/templates/admin_problems.jinja
@@ -11,7 +11,7 @@
 <script type="text/x-template" id="problem">
   <div class="accordion-item">
     <h2 class="accordion-header" :id="'heading' + problem.name">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" :data-bs-target="'#collapse' + problem.name" aria-expanded="false" :aria-controls="'collapse' + problem.name">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" :data-bs-target="'#collapse' + problem.name" aria-expanded="false" :aria-controls="'collapse' + problem.name">
         ${problem.name}
       </button>
     </h2>
@@ -57,7 +57,7 @@
     <Problem v-for="(problem, id) in store.problems" :key="id" :problem="problem"></Problem>
   <div class="accordion-item">
     <h2 class="accordion-header" id="create">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapsecreate" aria-expanded="false" aria-controls="collapsecreate">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsecreate" aria-expanded="false" aria-controls="collapsecreate">
         Create new problem
       </button>
     </h2>
