highlight create problem row

--- a/algobattle_web/templates/admin_problems.jinja
+++ b/algobattle_web/templates/admin_problems.jinja
@@ -57,7 +57,7 @@
     <Problem v-for="(problem, id) in store.problems" :key="id" :problem="problem"></Problem>
   <div class="accordion-item">
     <h2 class="accordion-header" id="create">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsecreate" aria-expanded="false" aria-controls="collapsecreate">
+      <button class="accordion-button collapsed bg-success bg-opacity-25" type="button" data-bs-toggle="collapse" data-bs-target="#collapsecreate" aria-expanded="false" aria-controls="collapsecreate">
         Create new problem
       </button>
     </h2>
