add edit buttons

--- a/algobattle_web/templates/admin_problems.jinja
+++ b/algobattle_web/templates/admin_problems.jinja
@@ -53,6 +53,11 @@
             </tr>
           </tbody>
         </table>
+        <div class="btn-group btn-group-sm" role="group">
+          <button type="button" class="btn btn-danger" data-bs-toggle="tooltip" title="Delete" v-if="editing" @click="delete_problem"><i class="bi bi-trash"></i></button>
+          <button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit" @click="toggle_editing"><i class="bi bi-pencil"></i></button>
+          <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" title="Submit edit" v-if="editing"><i class="bi bi-check2"></i></button>
+        </div>
       </form>
     </div>
   </div>
