fix logout link

--- a/algobattle_web/templates/base.jinja
+++ b/algobattle_web/templates/base.jinja
@@ -65,7 +65,7 @@
                   <hr class="dropdown-divider">
                 </li>
                 <li>
-                  <form action="/user/logout" method="post">
+                  <form action="/logout" method="post">
                     <button class="dropdown-item" type="submit" name="LogoutButton" value="test">Log out</button>
                   </form>
                 </li>
