--- a/algobattle_web/templates/admin_users.jinja
+++ b/algobattle_web/templates/admin_users.jinja
@@ -11,7 +11,7 @@
   <tr :class="{'table-primary': user.id == '{{user.id}}'}">
     <td>
       <div v-if="editing" class="input-group input-group-sm">
-        <input class="form-control" name="name" type="text" :placeholder="user.name">
+        <input class="form-control" name="name" type="text" v-model="user.name">
         <div class="input-group-append">
           <input type="checkbox" class="btn-check" id="set-admin" name="is_admin" v-model="user.is_admin">
           <label class="btn btn-outline-success btn-sm" for="set-admin" data-bs-toggle="tooltip" title="Admin"><i class="bi bi-patch-check"></i></label>
@@ -28,8 +28,8 @@
     </td>
     <td><span>${teams_str}</span></td>
     <td class="text-end">
-      <div class="btn-group btn-group-sm" role="group" v-if="user.id != '{{user.id}}'">
-        <button type="button" class="btn btn-danger" data-bs-toggle="tooltip" title="Delete user" v-if="editing" @click="delete_user"><i class="bi bi-trash"></i></button>
+      <div class="btn-group btn-group-sm" role="group">
+        <button type="button" class="btn btn-danger" data-bs-toggle="tooltip" title="Delete user" v-if="editing && user.id != '{{user.id}}'" @click="delete_user"><i class="bi bi-trash"></i></button>
         <button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit user" @click="toggle_editing"><i class="bi bi-pencil"></i></button>
         <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" title="Submit edit" v-if="editing"><i class="bi bi-check2"></i></button>
       </div>
