--- a/algobattle_web/templates/user.jinja
+++ b/algobattle_web/templates/user.jinja
@@ -1,24 +1,31 @@
 {% extends "base.jinja" %}
 {% block content %}
 
-<div class="col-8">
-  {% if error %}
-  <div class="alert alert-danger" role="alert">
-    The email {{error.name}} is already used by another user!
-    <button type="button" class="btn-close float-end" data-bs-dismiss="alert" aria-label="Close"></button>
+<script src="/static/scripts/user.js" type="module"></script>
+
+<div id="app">
+  <div class="d-flex justify-content-between">
+    <h3>User data</h3>
+    <button type="button" class="btn btn-sm btn-warning float-end" data-bs-toggle="tooltip" title="Edit" @click="toggle_editing"><i class="bi bi-pencil"></i></button>
   </div>
-  {% endif %}
-</div>
-<div class="col-6">
-  <h3>Edit user data</h3>
-  <form method="post">
-    <div class="mb-3">
-      <label for="email" class="form-label">email address</label>
-      <input type="email" class="form-control" name="email" placeholder="{{user.email}}">
-      <label for="name" class="form-label">name</label>
-      <input type="text" class="form-control" name="name" placeholder="{{user.name}}">
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+  <form @submit.prevent="edit_data">
+    <table class="table">
+      <tr>
+        <td>Email address</td>
+        <td>
+          <input v-if="editing" class="e-em form-control form-control-sm" name="email" type="email" v-model="store.user.email">
+          <div v-else>${store.user.email}</div>
+        </td>
+      </tr>
+      <tr>
+        <td>Name</td>
+        <td>
+          <input v-if="editing" class="e-em form-control form-control-sm" name="name" type="text" v-model="store.user.name">
+          <div v-else>${store.user.name}</div>
+        </td>
+      </tr>
+    </table>
+    <button v-if="editing" type="submit" class="btn btn-primary">Submit</button>
   </form>
 </div>
 
